# EV3DGS

./: README.md  ext.cpp  pyproject.toml
cuda_ev3dgs/: config.h  forward.cu  forward.h
docs/: README.md  index.html
docs/assets/css/: bootstrap.edit.css  styles.css
ev3dgs/: __init__.py
ev3dgs/scripts/: run_ev3dgs.py
ev3dgs/utils/: ev3dgs_render_panel.py  utils.py
project_page/: README.md  index.html
src/: README.MD
src/EV3DGS/: rasterize_points.cu  rasterize_points.h  setup.py
src/EV3DGS/cuda_ev3dgs/: rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
src/EV3DGS/ev3dgs/scripts/: ev3dgs_viewer.py  render_ev3dgs.py
